Reduce use of external resources (inline svg icon instead of loading an entire font+stylesheet) CSS: Family names containing whitespace should be quoted. HTML: Fix quoting inconsistency (single-quote vs double-quote)

--- a/style.css
+++ b/style.css
@@ -1,8 +1,16 @@
-/* Global Syling */
+/* Global Styling */
 
 * {
-  font-family: Ubuntu Mono;
+  font-family: "Ubuntu Mono";
   color: #00DFFC;
+}
+
+.homeIcon {
+  height: 1em;
+}
+
+.homeIcon path {
+  fill: currentColor;
 }
 
 body {
